# DEGORA

./: .gitattributes  .gitignore  AGENTS.md  CONTEXT.md  INSTRUCTIONS.md  LAB_NOTEBOOK.md  LICENSE  METHODOLOGY_SPEC.md  Makefile  NOVELTY_AUDIT.md  PHASE_A_STATUS.md  PLAN.md  README.md  README.rst  REVIEWER_LOG.md  RUBRIC.md  STATE.md  environment.yml
outputs/code/: Makefile  pyproject.toml  requirements.txt
outputs/code/degora/: __init__.py  aggregate.py  api.py  baselines.py  benchmark_stats.py  cli.py  demo.py  derived_counts.py  diagnostics.py  excel_export.py  excel_io.py  excel_template.py  gold.py  harmonize.py  metrics.py  provenance.py  rank_plane.py  resource_package.py  score_db.py  slice_runner.py  stats.py  tnfa_gate.py
outputs/code/figures/: make_benchmark_figure.py  make_cross_platform_microarray_figure.py  make_degora_atlas_dashboard.py  make_degora_evidence_explorer.py  make_degora_scheme_figure.py  make_evidence_card_figure.py  make_gold_recall_curve.py
outputs/code/scripts/: build_hypoxia_sources.py  build_score_db.py  check_generated_sources.py  check_source_provenance.py  check_tnfa_gate.py  compare_ifn_author_deg.py  compare_indisulam_microarray_sensitivity.py  derive_microarray_deg.py  export_degora_run_workbook.py  export_score_resource_package.py  extract_kindrick2026_source_data.py  fetch_benchmark_raw.py  fetch_hypoxia_rnaseq.py  run_baseline_preflight.py  run_baselines.py  run_diagnostics.py  run_maic_comparator.py  run_rank_plane.py  run_slice.py  serve_degora_db.py  summarize_ifn_pilot.py  summarize_indisulam_pilot.py  write_benchmark_deep_metrics.py  write_comparator_summary.py  write_cross_platform_microarray_benchmarks.py  write_direct_prior_art_no_go.py  write_er_stress_benchmark.py  write_er_stress_benchmark_report.py  write_expanded_gold_panels.py  write_gold_comparator_summary.py  write_heat_shock_benchmark.py  (+13 more)
(+795 files in other folders)
