[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "degora"
version = "0.3.1"
description = "Excel-first integration of published heterogeneous DEG tables"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "numpy",
  "scipy",
  "pyarrow",
  "openpyxl",
  "matplotlib",
]

[project.scripts]
degora = "degora.cli:main"

[tool.setuptools.packages.find]
include = ["degora*"]
