[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "degora"
version = "0.3.1"
description = "Excel-first integration of published heterogeneous DEG tables"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.1,<3.1",
  "numpy>=1.26,<3",
  "scipy>=1.11,<1.18",
  "pyarrow>=14.0.1,<25",
  "openpyxl>=3.1,<4",
  "defusedxml>=0.7,<1",
  "matplotlib>=3.8,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pip-audit>=2.7,<3",
]

[project.scripts]
degora = "degora.cli:main"

[tool.setuptools.packages.find]
include = ["degora*"]
